// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pentagon renders with children 1`] = `
<DocumentFragment>
  .cache-a84aqh-StyledPentagon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
  clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
  width: 48px;
  height: 48px;
  background-color: #ffe1e7;
}

<div
    class="cache-a84aqh-StyledPentagon e1h89m1f0"
  >
    X
  </div>
</DocumentFragment>
`;

exports[`Pentagon renders with custom color 1`] = `
<DocumentFragment>
  .cache-189rwax-StyledPentagon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
  clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
  width: 48px;
  height: 48px;
  background-color: yellow;
}

<div
    class="cache-189rwax-StyledPentagon e1h89m1f0"
  >
    X
  </div>
</DocumentFragment>
`;

exports[`Pentagon renders with custom size 1`] = `
<DocumentFragment>
  .cache-uxb5wk-StyledPentagon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
  clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
  width: 200px;
  height: 200px;
  background-color: #ffe1e7;
}

<div
    class="cache-uxb5wk-StyledPentagon e1h89m1f0"
  >
    X
  </div>
</DocumentFragment>
`;

exports[`Pentagon renders with default props 1`] = `
<DocumentFragment>
  .cache-a84aqh-StyledPentagon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
  clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
  width: 48px;
  height: 48px;
  background-color: #ffe1e7;
}

<div
    class="cache-a84aqh-StyledPentagon e1h89m1f0"
  />
</DocumentFragment>
`;
